# KinectHands

./: .gitignore  CMakeLists.txt  GitInstructions.txt  KinectHands-Info.plist  KinectHands.sln  KinectHands.vcxproj  KinectHands.vcxproj.filters  TO_DO.txt  hand_forests_settings.csv  kinect_hands.icns  make_bin_directory.sh  settings.csv  undelete_script
HandFit/: .gitignore  ASSIMP_COMPILE_INST_MAC_OS_X.txt  ASSIMP_COMPILE_INST_WIN7.txt  FREEIMAGE_COMPILE_INST_MAC_OS_X.txt  HandFit.sln  HandFit.vcxproj  HandFit.vcxproj.filters  HandFitData.vcxproj  HandFitData.vcxproj.filters  HandPose.vcxproj  HandPose.vcxproj.filters  Levenberg_Marquardt.m  Newton_Raphson.m  TestBFGS-Info.plist  TestBFGS.vcxproj  TestBFGS.vcxproj.filters  TestDE.vcxproj  TestDE.vcxproj.filters  TestLM.vcxproj  TestLM.vcxproj.filters  TestLPRPSO.vcxproj  TestLPRPSO.vcxproj.filters  TestNM.vcxproj  TestNM.vcxproj.filters  TestPSO.vcxproj  TestPSO.vcxproj.filters  TestSDB.vcxproj  TestSDB.vcxproj.filters  eval_hand_debug_textures.m  eval_hand_debug_textures_tiled.m  graph_cut_energy_functions.m  handSamplesVisualization.m  hand_model_diagram.ppt  hands_labeled_data_test.m  linux_instructions.txt  non_linear_least_sq.m  read_depth_images.m  sandbox.m  simplex_volume_test.m
HandForests/: .gitignore  HandForests.sln  HandForests.vcxproj  HandForests.vcxproj.filters  HandForestsDataEdit.vcxproj  HandForestsDataEdit.vcxproj.filters  TO DO.txt  driver.bat  driver_linux  driver_results_0.txt  driver_results_1.txt  driver_results_10.txt  driver_results_2.txt  driver_results_3.txt  driver_results_4.txt  driver_results_5.txt  driver_results_6.txt  driver_results_7.txt  driver_results_8.txt  driver_results_9.txt  gcc_with_cpp11_features.txt  program_settings.csv  results.xlsx  server_benchmarks.txt  server_notes.txt  zip_creation_notes.txt
HandNets/: .gitignore  BFGS_Backtracking.m  HandNets.ppt  Levenberg_Marquardt.m  Module.lua  OLD_saveConvStage.lua  OLD_saveNNStage.lua  ParseCSVLine.lua  TestTorchFramework.vcxproj  TestTorchFramework.vcxproj.filters  TrimTrailLeadWhitespace.lua  calc_statistics.lua  centered_gaussian.lua  check_cropped_depth_images.m  coeff2str.m  create_toy_image.m  cuda_test.lua  data_rotation_test.lua  define_criterion.lua  define_model.lua  distort.lua  downsample.m  downsample_by_2.m  draw_cross.m  filter_zero_bndry.m  filter_zero_bndry_with_scale.m  gaussFunc.m  gen_toy_hand_data.m  glProjection.m  hand_nets.bak_13_05_17.lua  hand_nets.lua  hand_nets_2.lua  hand_nets_bak_2013_03_26.lua  hand_nets_bak_2013_04_01.lua  hand_nets_driver  hand_nets_silent_driver  integral_image.m  load_data.lua  load_settings.lua  modifiedcoeff2str.m  (+36 more)
KinectHands/: CMakeLists.txt  KinectHands.vcxproj  KinectHands.vcxproj.filters  README.txt
KinectHands.xcodeproj/: project.pbxproj
KinectHands/build_intermediate/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  KinectHands.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
KinectHands/build_intermediate/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  KinectHands.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KinectHands/headers/app/: app.h  app.h.bak  frame_data.h
KinectHands/src/app/: app.cpp  app.cpp.bak  frame_data.cpp
KinectHands/src/main/: main.cpp
KinectViewer/: CMakeLists.txt  KinectViewer.vcxproj  KinectViewer.vcxproj.filters
ModelFit/: .gitignore  FREEIMAGE_COMPILE_INST_WIN7.txt  Gauss_Newton.m  HandFitData.vcxproj  HandFitData.vcxproj.filters  HandPose.vcxproj  HandPose.vcxproj.filters  ModelFit.vcxproj  ModelFit.vcxproj.filters  Partial_Deriv_From_Function_Handle.m  TestOptimization.vcxproj  TestOptimization.vcxproj.filters  TestPSO.vcxproj  TestPSO.vcxproj.filters  eval_hand_debug_textures.m  eval_hand_debug_textures_tiled.m  extendedRosenbrock.m  image_check.m  loadImageFile.m  sweep_and_prune_test.m
ModelFitPrimesense/: HandFitDataPrimesense.vcxproj  ModelFitPrimesense.vcxproj
TOG Paper/: TOG-Sample.aux  TOG-Sample.dvi  TOG-Sample.tex  acmtog.cls
TOG_Paper/: .gitignore  TOG-Sample.bib  TOG-Sample.blg  TOG-Sample.tex  acmtog.bst  figures.pptx
bytepipeTester/: bytepipeTester.1  main.cpp
dataset/: .gitignore  calculate_coords.m  calculate_detection_coords.m  convert_depth_to_uvd.m  convert_uvd_to_xyz.m  convert_xyz_to_uvd.m  evaluate_predictions.m  visualize_example.m  visualize_hand_data.m
driver_install/: .gitignore  INCLUDE_INSTALL_KinectHands.sh  INSTALL_KinectHands_MacOSX.sh  Jonathan's Instructions for Win7.txt  TO_DO  UNINSTALL_KinectHands_MacOSX.sh
java/: .classpath  .gitignore  .project  compile  run
jtil_resource_files/: settings.rcss  settings.tga  settings_window.rml  text.rcss  text.rml
jtorch/: CMakeLists.txt  README.txt  jtorch.vcxproj  jtorch.vcxproj.filters
jtorch_test/: .gitignore  CMakeLists.txt  accum.cl  jtorch_test.lua  jtorch_test.vcxproj  jtorch_test.vcxproj.filters  test_cpp_framework.lua  testmodel.bin.convnet
jtorch_test/src/: main_jtorch_test.cpp
kinect_interface/: CMakeLists.txt  kinect_interface.vcxproj  kinect_interface.vcxproj.filters
kinect_interface_primesense/: kinect_interface_primesense.vcxproj  kinect_interface_primesense.vcxproj.filters
lib/: OpenNI.jni64.exp  OpenNI.jni64.lib  XnVCNITE64_1_5_2.exp  XnVCNITE64_1_5_2.lib  XnVFeatures64_1_5_2.exp  XnVFeatures64_1_5_2.lib  XnVHandGenerator64_1_5_2.exp  XnVHandGenerator64_1_5_2.lib  XnVNITE.jni64.exp  XnVNITE.jni64.lib  XnVNITE64_1_5_2.exp  XnVNITE64_1_5_2.lib  libOpenNI.dylib  libusb-1.0.0.dylib  libusb-1.0.la  libzmq.dylib  libzmq.exp  libzmq.lib  openNI64.exp  openNI64.lib
matlab/: .gitignore  applylcn.m  applymask.m  cannytest.m  checkcolors.m  extractRawHandsFromDirectoryJT.m  extractRawHandsFromFileJT.m  extractRenderedHandFromFile.m  extractRenderedHandsFromDirectory.m  extractrawhandcontoursfromdirectory.m  extractrawhandcontoursfromfile.m  extractrawhandsfromdirectory.m  extractrawhandsfromfile.m  fit_lookup_table.m  getColor.m  getSimpleShapeContextFrom2DContour.m  handDataTest.m  handDataTest_hsv_find.m  imnorm.m  imsquare.m  match.m  (+10 more)
(+1048 files in other folders)
